sfSandBoxCode/force-app/main/default/objects/Business_Partners__c/Business_Partners__c.object-meta.xml
<CustomObject>
    <label>Business Partners</label>
    <nameField>
        <label>Business Partners Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>